--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,12 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+@import url('./common.css');
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./offerings.css');
+@import url('./favorites.css');
+@import url('./footer.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
