--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,30 @@
-<header></header>
+<header class="header">
+    <div class="header-container container">
+        <a class="logo link" href="./index.html">
+            <img class="logo-img" src="./img/logo.png" alt="logo" />
+        </a>
+        <button type="button" class="burger-button"><img src="./img/burger.png" alt="burger-button"></button>
+        <div class="header-right">
+            <nav>
+                <ul class="nav-list list">
+                    <li class="header-item">
+                        <a class="header-link link" href="./index.html">Home</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">About</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Service</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Menu</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-link link" href="">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <button type="button" class="button header-button">Order Now</button>
+        </div>
+    </div>
+</header>
